[package]
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
categories = ["os", "os::unix-apis"]
description = "Convert Ubuntu versions to codenames, and vice versa"
edition = "2018"
homepage = "https://github.com/pop-os/ubuntu-version"
keywords = ["linux", "ubuntu", "version", "codename"]
license = "MIT"
name = "ubuntu-version"
readme = "README.md"
version = "0.2.1"

[dependencies]
chrono = "0.4"
os-release = "0.1"
thiserror = "1"
